[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Enemies/snailWalk1.png" type="Texture" id=1]
[ext_resource path="res://Enemies/BasicEnemy/BasicEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.2276, 15.579 )

[node name="BasicEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.36359, -4.20448 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="snailWalk1" type="Sprite" parent="Sprite"]
position = Vector2( -2.62418, -4.2269 )
texture = ExtResource( 1 )

[node name="LeftEdge" type="RayCast2D" parent="."]
position = Vector2( -40.5359, -4.00905 )
enabled = true

[node name="RightEdge" type="RayCast2D" parent="."]
position = Vector2( 32.9633, -4.00904 )
enabled = true
